Added cassandra storage, adapted model a bit. Operations seems to be working (but tests for ChatShardEntity to be added). Expanded README and TODOs

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -48,6 +48,7 @@ akka {
     seed-nodes = ["akka.tcp://chat@127.0.0.1:11002"]
     auto-down-unreachable-after = off
     roles = ["chat"]
+
   }
 
   management {
@@ -82,8 +83,6 @@ akka {
       }
     }
   }
-
-  extensions = ["akka.cluster.metrics.ClusterMetricsExtension"]
 
   http {
     server {
@@ -173,5 +172,13 @@ chat {
     parsing {
       max-segment-length = 128
     }
+  }
+
+  cassandra {
+    seeds = ["localhost"]
+    port = 9042
+    schema.name = "chat"
+    user = "cassandra"
+    password = "cassandra"
   }
 }
