some logging fixes and naming fixes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "INFO"
-
   actor {
     provider = "cluster"
 
@@ -21,7 +21,7 @@ akka {
     }
 
     debug {
-      receive = off
+      receive = on
       autoreceive = off
       unhandled = off
     }
